# prtg-cli

./: README.md  TODO.md  pyproject.toml
examples/: example.yml
prtg_cli/: cli.py
prtg_cli/commands/: __init__.py  duplicate.py  get.py  manager.py  object.py
prtg_cli/core/: __init__.py  config.py  constants.py  converters.py
tests/: test_prtg_cli.py
